--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -96,32 +96,38 @@ header a:hover {
 
 
 @media (max-width: 768px) {
-  /* Réduction de la taille de la police dans le header */
   header > div {
     font-size: 16px;
-  }
-  
-  /* Ajustement de la navigation */
-  .header-nav a {
-    padding-right: 20px;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  /* Réduction de la marge et de l'espacement du contenu principal */
+  .header-nav {
+    flex-direction: column;
+    gap: 5px;
+    align-items: flex-start;
+  }
+
+  header a {
+    padding-right: 0;
+    font-size: 18px;
+  }
+
   #aproposCible {
     flex-direction: column;
+    align-items: center;
     gap: 20px;
-    margin: 100px auto 0;
+    margin-top: 100px;
   }
 
-  /* Ajustement de la taille de l'image */
   #aproposCible img {
-    width: 50%;
+    width: 60%;
+    max-width: 150px;
     border-radius: 10px;
   }
 
-  /* Réduction de la taille du texte du titre et du paragraphe */
   #aproposCible h2 {
-    font-size: 40px;
+    font-size: 36px;
   }
 
   #aproposCible p {
