--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
 
+:root {
+  --cl-bg1: #011627;
+  --cl-bg2: #011221;
+  --cl-grey: #607b96;
+  --cl-white: #ffffff;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -8,7 +15,7 @@
   font-weight: 450;
 }
 body {
-  background-color: #1e2d3d;
+  background-color: var(--cl-bg1);
   padding-top: 60px;
 }
 
@@ -16,11 +23,11 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #1e2d3d;
+  background-color: var(--cl-bg1);
   margin-top: 0;
   padding-top: 15px;
   padding-bottom: 15px;
-  border-bottom: 3px solid #607b96;
+  border-bottom: 3px solid var(--cl-bg2);
   z-index: 1000;
 }
 
@@ -30,7 +37,7 @@ header > div {
   align-items: center;
 
   font-size: 20px;
-  color: #607b96;
+  color: var(--cl-grey);
 }
 
 header p {
@@ -46,18 +53,18 @@ header p {
 
 header a {
   text-decoration: none;
-  color: #607b96;
+  color: var(--cl-grey);
   padding-right: 50px;
   transition: color 0.2s ease;
   cursor: pointer;
 }
 
 .active-link {
-  color: #ffffff;
+  color: var(--cl-white);
 }
 
 header a:hover {
-  color: #ffffff;
+  color: var(--cl-white);
 }
 
 #aproposCible {
@@ -71,18 +78,18 @@ header a:hover {
 
 #aproposCible img {
   width: 20%;
-  border-radius: 75px;
+  border-radius: 10%;
   align-self: flex-start;
 }
 
 #aproposCible h2 {
-  color: white;
+  color: var(--cl-white);
   font-size: 80px;
   text-align: center;
 }
 
 #aproposCible p {
-  color: white;
+  color: var(--cl-white);
   font-size: 20px;
   text-align: center;
 }
@@ -93,6 +100,189 @@ header a:hover {
   align-items: center;
   gap: 20px;
 }
+
+
+
+
+.timeline-horizontal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-top: 150px;
+  max-width: 90%;
+  overflow: hidden;
+  text-align: center;
+}
+
+.timeline-horizontal h3 {
+  width: 100%;
+  font-size: 28px;
+  color: var(--cl-white);
+  margin-bottom: 50px;
+}
+
+.timeline-horizontal::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 10%; 
+  width: 80%; 
+  height: 4px;
+  background-color: var(--cl-grey);
+  z-index: 1;
+}
+
+.timeline-bubble {
+  position: relative;
+  width: 300px;
+  margin: 20px;
+  padding: 15px;
+  background-color: var(--cl-bg2);
+  border-radius: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  z-index: 2;
+  transform: translateX(-60px);
+}
+
+.date {
+  display: block;
+  font-size: 14px;
+  color: var(--cl-grey);
+  margin-bottom: 8px;
+  font-weight: bold;
+  text-align: center;
+  background-color: var(--cl-bg1);
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: fit-content;
+  margin: 0 auto 8px;
+}
+
+.timeline-bubble:nth-child(odd) {
+  transform: translate(-60px, -20px);
+}
+
+.timeline-bubble:nth-child(even) {
+  transform: translate(-60px, 20px);
+}
+
+.bubble-content h4 {
+  color: var(--cl-white);
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.bubble-content p {
+  font-size: 14px;
+  color: var(--cl-grey);
+  margin: 5px 0;
+}
+
+/* Effet de survol pour les bulles */
+.timeline-bubble:hover {
+  transform: scale(1.1) translateX(-60px);
+  background-color: var(--cl-bg1);
+}
+
+
+
+
+
+
+
+.svg-separator {
+  width: 100%;
+  overflow: hidden;
+  background-color: var(--cl-bg2);
+}
+
+.svg-separator svg {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+#projetsCible {
+  background-color: var(--cl-bg2);
+  padding: 50px 10%;
+  color: var(--cl-white);
+  text-align: center;
+  margin-top: -60px;
+}
+
+#projetsCible h2 {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.project-card {
+  background-color: var(--cl-bg1);
+  border-radius: 8px;
+  padding: 20px;
+  margin-bottom: 20px;
+  transition: transform 0.2s ease;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-card:hover {
+  transform: scale(1.05);
+}
+
+/* Style des images */
+.project-image {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  margin-bottom: 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Effet de zoom au survol */
+.project-image:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
+}
+
+.project-card h3 {
+  font-size: 24px;
+  color: var(--cl-white);
+  margin: 10px 0;
+}
+
+.project-card p {
+  color: var(--cl-grey);
+  margin: 15px 0;
+  text-align: center;
+}
+
+.project-link {
+  color: var(--cl-white);
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.2s ease;
+  margin-top: 5px;
+  display: inline-flex;
+  align-items: center;
+}
+
+.project-link i {
+  margin-right: 8px;
+  font-size: 18px;
+}
+
+.project-link:hover {
+  color: var(--cl-grey);
+}
+
+
+
 
 
 @media (max-width: 768px) {
@@ -134,3 +324,7 @@ header a:hover {
     font-size: 16px;
   }
 }
+
+
+
+
