--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -509,6 +509,17 @@ header a:hover {
   .skill-item {
     width: 90%;
   }
+
+  #aproposCible {
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+  }
+
+  #aproposCible img {
+    width: 50%;
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 768px) {
@@ -537,6 +548,16 @@ header a:hover {
   .timeline-bubble {
     width: 90%;
   }
+
+  #aproposCible img {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .timeline-horizontal {
+    display: flex;
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 480px) {
@@ -555,6 +576,11 @@ header a:hover {
 
   .header-nav a {
     padding-right: 20px;
+    font-size: 80%;
+  }
+
+  header p {
+    font-size: 80%;
   }
 
   .project-card {
@@ -573,38 +599,12 @@ header a:hover {
   .contact-grid {
     grid-template-columns: 1fr;
   }
-}
 
-@media (max-width: 1200px) {
-  #aproposCible {
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-  }
-
-  #aproposCible img {
-    width: 50%;
-    margin: 0 auto; /* Centrage horizontal */
-  }
-}
-
-@media (max-width: 768px) {
-  #aproposCible img {
-    width: 70%;
-    margin: 0 auto; /* Centrage horizontal */
-  }
-
-  .timeline-horizontal {
-    display: flex;
-    margin: 0 auto;
-  }
-
-
-}
-
-@media (max-width: 480px) {
   #aproposCible img {
     width: 80%;
-    margin: 0 auto; /* Centrage horizontal */
+    margin: 0 auto;
   }
 }
+
+
+
