--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -104,7 +104,6 @@ header a:hover {
   gap: 20px;
 }
 
-
 /* Section des compétences */
 #competences {
   margin: 50px auto;
@@ -173,11 +172,6 @@ header a:hover {
   line-height: 1.6;
 }
 
-
-
-
-
-
 .timeline-horizontal {
   display: flex;
   justify-content: center;
@@ -197,7 +191,7 @@ header a:hover {
 }
 
 .timeline-horizontal::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 50%;
   left: 10%;
@@ -218,8 +212,6 @@ header a:hover {
   z-index: 2;
 }
 
-
-
 .date {
   display: block;
   font-size: 14px;
@@ -234,8 +226,6 @@ header a:hover {
   margin: 0 auto 8px;
 }
 
-
-
 .bubble-content h4 {
   color: var(--cl-white);
   font-size: 18px;
@@ -248,6 +238,12 @@ header a:hover {
   margin: 5px 0;
 }
 
+.bubble-content a {
+  color: var(--cl-white);
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
 
 .svg-separator1 {
   width: 100%;
@@ -272,9 +268,6 @@ header a:hover {
   width: 100%;
   height: auto;
 }
-
-
-
 
 #projetsCible {
   display: flex;
@@ -302,7 +295,7 @@ header a:hover {
   scroll-snap-type: x mandatory;
   gap: 20px;
   padding: 20px 0;
-  max-width: 100%; 
+  max-width: 100%;
   scrollbar-width: thin;
   scrollbar-color: var(--cl-grey) transparent;
   -webkit-overflow-scrolling: touch;
@@ -311,7 +304,6 @@ header a:hover {
   cursor: grab;
   user-select: none;
   touch-action: pan-x;
-  
 }
 
 .project-carousel.active {
@@ -339,12 +331,12 @@ header a:hover {
   overflow: hidden;
   scroll-snap-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .project-card:hover {
   transform: translateY(-10px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .project-carousel .project-card {
@@ -419,7 +411,6 @@ header a:hover {
   margin-right: 8px;
 }
 
-
 .image-modal {
   position: fixed;
   top: 0;
@@ -452,28 +443,26 @@ header a:hover {
   }
 }
 
-
 #lightbox {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); 
-  display: none; 
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 1000;
   cursor: pointer;
 }
 
-
 #lightbox-img {
   max-width: 90%;
   max-height: 90%;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease; 
+  transition: transform 0.3s ease;
 }
 
 #lightbox:hover #lightbox-img {
@@ -541,7 +530,6 @@ header a:hover {
   text-decoration: none;
 }
 
-
 /* Footer */
 #siteFooter {
   background-color: var(--cl-bg1);
@@ -588,8 +576,20 @@ header a:hover {
   font-size: 20px;
 }
 
+/* Style for .location-pin */
+.location-pin {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 14px;
+  color: var(--cl-grey);
+  margin-top: 10px;
+}
 
-
+.location-pin i {
+  color: var(--cl-white);
+  font-size: 16px;
+}
 
 /* Responsive Design */
 
@@ -716,10 +716,6 @@ header a:hover {
   }
 }
 
-
-
-
-
 .announcement-banner {
   background-color: var(--cl-bg2);
   color: var(--cl-grey);
@@ -731,4 +727,4 @@ header a:hover {
 
 .spanDate {
   color: var(--cl-white);
-} 
+}
